Fix z-index of nav

--- a/project/static/css/application.less
+++ b/project/static/css/application.less
@@ -23,6 +23,7 @@ nav {
   overflow: hidden;
   padding-left: 20px;
   text-align: left;
+  z-index: 2;
 
   a {
     display: inline-block;
